iml-services/iml-device/src/snapshots/iml_device__virtual_device__tests__full_oss_test_oss2.local_31.snap
---
source: iml-services/iml-device/src/virtual_device.rs
expression: c_serde
---
{
  "ScsiDevice": {
    "children": [
      {
        "Mpath": {
          "children": [
            {
              "Zpool": {
                "children": [
                  {
                    "Dataset": {
                      "guid": 4938924322394606204,
                      "kind": "filesystem",
                      "mount": null,
                      "name": "ost2/ost2",
                      "props": [
                        {
                          "name": "name",
                          "value": "ost2/ost2"
                        },
                        {
                          "name": "type",
                          "value": "filesystem"
                        },
                        {
                          "name": "creation",
                          "value": "1587120521"
                        },
                        {
                          "name": "used",
                          "value": "3616768"
                        },
                        {
                          "name": "available",
                          "value": "5164685312"
                        },
                        {
                          "name": "referenced",
                          "value": "3616768"
                        },
                        {
                          "name": "compressratio",
                          "value": "1.00x"
                        },
                        {
                          "name": "mounted",
                          "value": "no"
                        },
                        {
                          "name": "quota",
                          "value": "0"
                        },
                        {
                          "name": "reservation",
                          "value": "0"
                        },
                        {
                          "name": "recordsize",
                          "value": "1048576"
                        },
                        {
                          "name": "mountpoint",
                          "value": "/ost2/ost2"
                        },
                        {
                          "name": "sharenfs",
                          "value": "off"
                        },
                        {
                          "name": "checksum",
                          "value": "on"
                        },
                        {
                          "name": "compression",
                          "value": "off"
                        },
                        {
                          "name": "atime",
                          "value": "on"
                        },
                        {
                          "name": "devices",
                          "value": "on"
                        },
                        {
                          "name": "exec",
                          "value": "on"
                        },
                        {
                          "name": "setuid",
                          "value": "on"
                        },
                        {
                          "name": "readonly",
                          "value": "off"
                        },
                        {
                          "name": "zoned",
                          "value": "off"
                        },
                        {
                          "name": "snapdir",
                          "value": "hidden"
                        },
                        {
                          "name": "aclinherit",
                          "value": "restricted"
                        },
                        {
                          "name": "createtxg",
                          "value": "11"
                        },
                        {
                          "name": "canmount",
                          "value": "off"
                        },
                        {
                          "name": "xattr",
                          "value": "sa"
                        },
                        {
                          "name": "copies",
                          "value": "1"
                        },
                        {
                          "name": "version",
                          "value": "5"
                        },
                        {
                          "name": "utf8only",
                          "value": "off"
                        },
                        {
                          "name": "normalization",
                          "value": "none"
                        },
                        {
                          "name": "casesensitivity",
                          "value": "sensitive"
                        },
                        {
                          "name": "vscan",
                          "value": "off"
                        },
                        {
                          "name": "nbmand",
                          "value": "off"
                        },
                        {
                          "name": "sharesmb",
                          "value": "off"
                        },
                        {
                          "name": "refquota",
                          "value": "0"
                        },
                        {
                          "name": "refreservation",
                          "value": "0"
                        },
                        {
                          "name": "guid",
                          "value": "4938924322394606204"
                        },
                        {
                          "name": "primarycache",
                          "value": "all"
                        },
                        {
                          "name": "secondarycache",
                          "value": "all"
                        },
                        {
                          "name": "usedbysnapshots",
                          "value": "0"
                        },
                        {
                          "name": "usedbydataset",
                          "value": "3616768"
                        },
                        {
                          "name": "usedbychildren",
                          "value": "0"
                        },
                        {
                          "name": "usedbyrefreservation",
                          "value": "0"
                        },
                        {
                          "name": "logbias",
                          "value": "latency"
                        },
                        {
                          "name": "dedup",
                          "value": "off"
                        },
                        {
                          "name": "mlslabel",
                          "value": "none"
                        },
                        {
                          "name": "sync",
                          "value": "standard"
                        },
                        {
                          "name": "dnodesize",
                          "value": "auto"
                        },
                        {
                          "name": "refcompressratio",
                          "value": "1.00x"
                        },
                        {
                          "name": "written",
                          "value": "3616768"
                        },
                        {
                          "name": "logicalused",
                          "value": "1825792"
                        },
                        {
                          "name": "logicalreferenced",
                          "value": "1825792"
                        },
                        {
                          "name": "volmode",
                          "value": "default"
                        },
                        {
                          "name": "filesystem_limit",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapshot_limit",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "filesystem_count",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapshot_count",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapdev",
                          "value": "hidden"
                        },
                        {
                          "name": "acltype",
                          "value": "off"
                        },
                        {
                          "name": "context",
                          "value": "none"
                        },
                        {
                          "name": "fscontext",
                          "value": "none"
                        },
                        {
                          "name": "defcontext",
                          "value": "none"
                        },
                        {
                          "name": "rootcontext",
                          "value": "none"
                        },
                        {
                          "name": "relatime",
                          "value": "off"
                        },
                        {
                          "name": "redundant_metadata",
                          "value": "all"
                        },
                        {
                          "name": "overlay",
                          "value": "off"
                        },
                        {
                          "name": "lustre:failover.node",
                          "value": "10.73.20.22@tcp"
                        },
                        {
                          "name": "lustre:svname",
                          "value": "zfsmo-OST0002"
                        },
                        {
                          "name": "lustre:mgsnode",
                          "value": "10.73.20.11@tcp:10.73.20.12@tcp"
                        },
                        {
                          "name": "lustre:flags",
                          "value": "34"
                        },
                        {
                          "name": "lustre:fsname",
                          "value": "zfsmo"
                        },
                        {
                          "name": "lustre:version",
                          "value": "1"
                        },
                        {
                          "name": "lustre:index",
                          "value": "2"
                        }
                      ]
                    }
                  }
                ],
                "guid": 5626247548244847586,
                "health": "ONLINE",
                "mount": {
                  "fs_type": "zfs",
                  "opts": "rw,xattr,noacl",
                  "source": "ost2",
                  "target": "/ost2"
                },
                "name": "ost2",
                "props": [],
                "size": 5335154688,
                "state": "ACTIVE",
                "vdev": {
                  "Root": {
                    "cache": [],
                    "children": [
                      {
                        "Disk": {
                          "dev_id": "dm-uuid-mpath-360014056f60a7c7101c4db58fcb47d92",
                          "guid": 7914329698150750584,
                          "is_log": false,
                          "path": "/dev/mapper/mpathc",
                          "phys_path": null,
                          "state": "ONLINE",
                          "whole_disk": false
                        }
                      }
                    ],
                    "spares": []
                  }
                }
              }
            }
          ],
          "devpath": "/devices/virtual/block/dm-10",
          "dm_name": "mpathc",
          "filesystem_type": "zfs_member",
          "fs_label": "ost2",
          "fs_uuid": "5626247548244847586",
          "major": "253",
          "minor": "10",
          "mount": null,
          "paths": [
            "/dev/mapper/mpathc",
            "/dev/disk/by-id/dm-name-mpathc",
            "/dev/disk/by-id/dm-uuid-mpath-360014056f60a7c7101c4db58fcb47d92",
            "/dev/disk/by-label/ost2",
            "/dev/disk/by-uuid/5626247548244847586",
            "/dev/dm-10"
          ],
          "scsi80": "SLIO-ORG ost11           6f60a7c7-101c-4db5-8fcb-47d92902f8f1",
          "serial": "360014056f60a7c7101c4db58fcb47d92",
          "size": 5368709120
        }
      }
    ],
    "devpath": "/devices/platform/host5/session4/target5:0:0/5:0:0:10/block/sdw",
    "filesystem_type": "mpath_member",
    "fs_label": "ost2",
    "fs_uuid": "5626247548244847586",
    "major": "65",
    "minor": "96",
    "mount": null,
    "paths": [
      "/dev/disk/by-id/scsi-360014056f60a7c7101c4db58fcb47d92",
      "/dev/disk/by-id/wwn-0x60014056f60a7c7101c4db58fcb47d92",
      "/dev/disk/by-path/fc---lun-10",
      "/dev/disk/by-path/ip-10.73.50.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:oss-lun-10",
      "/dev/disk/by-label/ost2",
      "/dev/disk/by-uuid/5626247548244847586",
      "/dev/sdw"
    ],
    "scsi80": "SLIO-ORG ost11           6f60a7c7-101c-4db5-8fcb-47d92902f8f1",
    "serial": "360014056f60a7c7101c4db58fcb47d92",
    "size": 5368709120
  }
}
